--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: countly/countly-server:latest,countly/countly-server:${{ steps.vars.outputs.tag }}
+          tags: uburuntu/countly:server-latest,uburuntu/countly:server-${{ steps.vars.outputs.tag }}
           
   push_api:
     name: Push Countly API Image
@@ -67,7 +67,7 @@ jobs:
         with:
           push: true
           file: ./Dockerfile-api
-          tags: countly/api:latest,countly/api:${{ steps.vars.outputs.tag }}
+          tags: uburuntu/countly:api-latest,uburuntu/countly:api-${{ steps.vars.outputs.tag }}
 
   push_frontend:
     name: Push Countly Frontend Image
@@ -98,7 +98,7 @@ jobs:
         with:
           push: true
           file: ./Dockerfile-frontend
-          tags: countly/frontend:latest,countly/frontend:${{ steps.vars.outputs.tag }}
+          tags: uburuntu/countly:frontend-latest,uburuntu/countly:frontend-${{ steps.vars.outputs.tag }}
           
   push_all:
     name: Push Countly Single-All Image
@@ -129,4 +129,4 @@ jobs:
         with:
           push: true
           file: ./Dockerfile-core
-          tags: countly/countly-core:latest,countly/countly-core:${{ steps.vars.outputs.tag }}
+          tags: uburuntu/countly:core-latest,uburuntu/countly:core-${{ steps.vars.outputs.tag }}
